--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -73,7 +73,7 @@ jobs:
     environment:
       name: Production
     runs-on: ubuntu-latest
-    need: [build]
+    needs: [build]
 
     steps:
       - name: Pulling Git Repo
