--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,10 +1,13 @@
 name: Build and Deploy Code
 
 on:
-  push:
-    branches: ['main']
-  pull_request:
-    branches: ['main']
+  # push:
+  #   branches: ['main']
+  # pull_request:
+  #   branches: ['main']
+  schedule:
+    - cron: '15 11 * * *'
+    - cron: '15 11 * * *'
 
 jobs:
   build:
@@ -35,20 +38,23 @@ jobs:
           --health-retries 5
 
     runs-on: ubuntu-latest
-    steps:
-      - name: Pulling Git Repo
-        uses: actions/checkout@v3
-      - name: Install Python 3.9
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-          architecture: 'x64'
-      - name: Update pip
-        run: python -m pip install --upgrade pip
-      - name: Installing all dependencies
-        run: pip install -r requirements.txt
-      - name: Test with pytest
-        run: pytest
+    if: github.event.schedule != '15 11 * * *'
+    run:
+      
+      steps:
+        - name: Pulling Git Repo
+          uses: actions/checkout@v3
+        - name: Install Python 3.9
+          uses: actions/setup-python@v4
+          with:
+            python-version: '3.9'
+            architecture: 'x64'
+        - name: Update pip
+          run: python -m pip install --upgrade pip
+        - name: Installing all dependencies
+          run: pip install -r requirements.txt
+        - name: Test with pytest
+          run: pytest
 
       # Docker Image
       # - name: Login to Docker Hub
@@ -75,12 +81,29 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build]
 
+    if: github.event.schedule != '15 11 * * *'
+    run:
+      steps:
+        - name: Pulling Git Repo
+          uses: actions/checkout@v3
+        # - name: Deploying to Heroku
+        #   uses: akhileshns/heroku-deploy@v3.12.12
+        #   with:
+        #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        #     heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+        #     heroku_email: ${{secrets.HEROKU_EMAIL}}
+        - name: Deploying to Railway
+          run: railway up -s ${secrets.RAILWAY_SERVICE}
+          
+
+  shutdown:
+    environment:
+      name: Production
+    runs-on: ubuntu-latest
+    # needs: [deploy]
     steps:
-      - name: Pulling Git Repo
-        uses: actions/checkout@v3
-      - name: Deploying to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+      - name: Shutting down the production
+        if: github.event.schedule != '20 11 * * *'
+        run: railway down --yes
+        env:
+          RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
