--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,8 +6,8 @@ on:
   # pull_request:
   #   branches: ['main']
   schedule:
-    - cron: '00 12 * * *'
-    - cron: '15 12 * * *'
+    - cron: '10 12 * * *'
+    - cron: '20 12 * * *'
 
 jobs:
   build:
@@ -48,13 +48,13 @@ jobs:
           python-version: '3.9'
           architecture: 'x64'
       - name: Update pip
-        if: github.event.schedule != '00 12 * * *'
+        if: github.event.schedule != '10 12 * * *'
         run: python -m pip install --upgrade pip
       - name: Installing all dependencies
-        if: github.event.schedule != '00 12 * * *'
+        if: github.event.schedule != '10 12 * * *'
         run: pip install -r requirements.txt
       - name: Test with pytest
-        if: github.event.schedule != '00 12 * * *'
+        if: github.event.schedule != '10 12 * * *'
         run: pytest
 
       # Docker Image
@@ -85,14 +85,18 @@ jobs:
     steps:
       - name: Pulling Git Repo
         uses: actions/checkout@v3
-      # - name: Deploying to Heroku
-      #   uses: akhileshns/heroku-deploy@v3.12.12
-      #   with:
-      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      #     heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-      #     heroku_email: ${{secrets.HEROKU_EMAIL}}
+      - name: Get NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16 # Railway requires Node version 16 or higher
+      - name: Install Railway
+        run: npm i -g @railway/cli
+      - name: Link to the railway service
+        run: railway link ${secrets.RAILWAY_PROJECT_ID}
+        env:
+          RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Deploying to Railway
-        if: github.event.schedule != '00 12 * * *'
+        if: github.event.schedule != '10 12 * * *'
         run: railway up -s ${secrets.RAILWAY_SERVICE}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
@@ -102,10 +106,20 @@ jobs:
     environment:
       name: Production
     runs-on: ubuntu-latest
-    # needs: [deploy]
+    needs: [deploy]
     steps:
+      - name: Get NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16 # Railway requires Node version 16 or higher
+      - name: Install Railway
+        run: npm i -g @railway/cli
+      - name: Link to the railway service
+        run: railway link ${secrets.RAILWAY_PROJECT_ID}
+        env:
+          RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Shutting down the production
-        if: github.event.schedule != '15 12 * * *'
+        if: github.event.schedule != '20 12 * * *'
         run: railway down --yes
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
