--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -48,13 +48,13 @@ jobs:
           python-version: '3.9'
           architecture: 'x64'
       - name: Update pip
-        if: github.event.schedule != '30 14 * * *'
+        if: github.event.schedule == '30 14 * * *'
         run: python -m pip install --upgrade pip
       - name: Installing all dependencies
-        if: github.event.schedule != '30 14 * * *'
+        if: github.event.schedule == '30 14 * * *'
         run: pip install -r requirements.txt
       - name: Test with pytest
-        if: github.event.schedule != '30 14 * * *'
+        if: github.event.schedule == '30 14 * * *'
         run: pytest
 
       # Docker Image
@@ -96,7 +96,7 @@ jobs:
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Deploying to Railway
-        if: github.event.schedule != '30 14 * * *'
+        if: github.event.schedule == '30 14 * * *'
         run: railway up -s ${secrets.RAILWAY_SERVICE}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
@@ -119,7 +119,7 @@ jobs:
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Shutting down the production
-        if: github.event.schedule != '30 17 * * *'
+        if: github.event.schedule == '30 17 * * *'
         run: railway down --yes
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
