--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,8 +6,8 @@ on:
   # pull_request:
   #   branches: ['main']
   schedule:
-    - cron: '20 17 * * *'
-    - cron: '40 17 * * *'
+    - cron: '30 17 * * *'
+    - cron: '50 17 * * *'
 
 jobs:
   build:
@@ -48,13 +48,13 @@ jobs:
           python-version: '3.9'
           architecture: 'x64'
       - name: Update pip
-        if: github.event.schedule != '20 17 * * *'
+        if: github.event.schedule != '30 17 * * *'
         run: python -m pip install --upgrade pip
       - name: Installing all dependencies
-        if: github.event.schedule != '20 17 * * *'
+        if: github.event.schedule != '30 17 * * *'
         run: pip install -r requirements.txt
       - name: Test with pytest
-        if: github.event.schedule != '20 17 * * *'
+        if: github.event.schedule != '30 17 * * *'
         run: pytest
 
       # Docker Image
@@ -92,11 +92,11 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Link to the railway service
-        run: railway link ${{secrets.RAILWAY_PROJECT_ID}}
+        run: railway link ${{vars.RAILWAY_PROJECT_ID}}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Deploying to Railway
-        if: github.event.schedule != '20 17 * * *'
+        if: github.event.schedule != '30 17 * * *'
         run: railway up -s ${{secrets.RAILWAY_SERVICE}}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
@@ -119,7 +119,7 @@ jobs:
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Shutting down the production
-        if: github.event.schedule != '40 17 * * *'
+        if: github.event.schedule != '50 17 * * *'
         run: railway down --yes
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
