--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -115,7 +115,7 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Link to the railway service
-        run: railway link ${{secrets.RAILWAY_PROJECT_ID}}
+        run: railway link ${{vars.RAILWAY_PROJECT_ID}}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Shutting down the production
