--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -43,13 +43,13 @@ jobs:
           python-version: '3.9'
           architecture: 'x64'
       - name: Update pip
-        if: github.event.schedule != '33 10 * * *'
+        if: github.event.schedule >= '33 10 * * *'
         run: python -m pip install --upgrade pip
       - name: Installing all dependencies
-        if: github.event.schedule != '33 10 * * *'
+        if: github.event.schedule >= '33 10 * * *'
         run: pip install -r requirements.txt
       - name: Test with pytest
-        if: github.event.schedule != '33 10 * * *'
+        if: github.event.schedule >= '33 10 * * *'
         run: pytest
 
       # Docker Image
@@ -87,7 +87,7 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Deploying to Railway
-        if: github.event.schedule != '33 10 * * *'
+        if: github.event.schedule >= '33 10 * * *'
         run: railway up -s ${{secrets.RAILWAY_SERVICE}}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
