--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ jobs:
           node-version: 16    # Railway requires NodeJS version 16 or higher
       - name: Install Railway
         run: npm i -g @railway/cli
+      - name: Link to the service
+        run: railway service ${{secrets.RAILWAY_SERVICE}}
+        env:
+          RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Shutting down production
         if: github.event.schedule >= '55 11 * * *'
         run: railway down --yes
