--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Shutdown
 
 on:
   schedule:
-    - cron: '20 13 * * *'
+    - cron: '27 15 * * *'
 
 jobs:
   shutdown:
@@ -16,12 +16,16 @@ jobs:
           node-version: 16    # Railway requires NodeJS version 16 or higher
       - name: Install Railway
         run: npm i -g @railway/cli
-      - name: Link to the service
-        run: railway service ${{secrets.RAILWAY_SERVICE}}
-        env:
-          RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
+      # - name: Run Railway Link
+      #   run: railway link ${{vars.RAILWAY_PROJECT_ID}}
+      #   env:
+      #     RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
+      # - name: Link to the service
+      #   run: railway service ${{secrets.RAILWAY_SERVICE}}
+      #   env:
+      #     RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
       - name: Shutting down production
-        if: github.event.schedule >= '20 13 * * *'
-        run: railway down --yes
+        if: github.event.schedule >= '27 15 * * *'
+        run: railway down --yes -s ${{secrets.RAILWAY_SERVICE}}
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
