--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Shutdown
 
 on:
   schedule:
-    - cron: '26 8 * * *'
+    - cron: '57 8 * * *'
 
 jobs:
   shutdown:
@@ -10,6 +10,15 @@ jobs:
       name: 'Production'
     runs-on: ubuntu-latest
     steps:
+      - name: Install Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          architecture: 'x64'
+      - name: Update pip
+        run: python -m pip install --upgrade pip
+      - name: Installing all dependencies
+        run: pip install -r requirements.txt
       - name: Get NodeJS
         uses: actions/setup-node@v3
         with:
@@ -17,7 +26,6 @@ jobs:
       - name: Install Railway
         run: npm i -g @railway/cli
       - name: Redeploy
-        # if: github.event.schedule >= '25 8 * * *'
         run: railway up -s ${{secrets.RAILWAY_SERVICE}} --detach
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
@@ -25,7 +33,6 @@ jobs:
         run: sleep 2m
         shell: bash
       - name: Shutting down production
-        # if: github.event.schedule >= '25 8 * * *'
         run: railway down --yes --json
         env:
           RAILWAY_TOKEN: ${{secrets.RAILWAY_TOKEN}}
