--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Shutdown
 
 on:
   schedule:
-    - cron: '57 8 * * *'
+    - cron: '16 9 * * *'
 
 jobs:
   shutdown:
@@ -10,6 +10,8 @@ jobs:
       name: 'Production'
     runs-on: ubuntu-latest
     steps:
+      - name: Pulling Git Repo
+        uses: actions/checkout@v3
       - name: Install Python 3.9
         uses: actions/setup-python@v4
         with:
